Add amdgpu ioctl (#290)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,6 +133,7 @@ set(FELIX86_HLE_SOURCES
     src/felix86/hle/thunks_luajit.cpp
     src/felix86/hle/vdso.cpp
 
+    src/felix86/hle/ioctl/amdgpu.cpp
     src/felix86/hle/ioctl/drm.cpp
     src/felix86/hle/ioctl/fat.cpp
     src/felix86/hle/ioctl/fs.cpp
