--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,6 @@ option(BUILD_THUNKING "Build with thunking support" ON)
 
 project(felix86)
 include(CheckGit.cmake)
-include(CheckIncludeFile)
 
 if (NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE RelWithDebInfo)
@@ -60,30 +59,13 @@ add_subdirectory(external/fmt)
 
 if (BUILD_THUNKING)
     message("Building with thunking support")
-    unset(HAVE_GLX_H CACHE)
-    unset(HAVE_GL_H CACHE)
-    unset(HAVE_VK_H CACHE)
-    unset(HAVE_X11_H CACHE)
-    check_include_file("GL/glx.h" HAVE_GLX_H)
-    check_include_file("GL/gl.h" HAVE_GL_H)
-    check_include_file("vulkan/vulkan.h" HAVE_VK_H)
-    check_include_file("X11/Xlibint.h" HAVE_X11_H)
-
-    if(NOT HAVE_GLX_H)
-        message(FATAL_ERROR "GLX header <GL/glx.h> not found, install libglx-dev on Debian or the package that installs it on your distro")
-    endif()
-
-    if(NOT HAVE_GL_H)
-        message(FATAL_ERROR "GL header <GL/gl.h> not found, install libgl-dev on Debian or the package that installs it on your distro")
-    endif()
-
-    if(NOT HAVE_VK_H)
-        message(FATAL_ERROR "Vulkan header <vulkan/vulkan.h> not found, install libvulkan-dev on Debian or the package that installs it on your distro")
-    endif()
-
-    if(NOT HAVE_X11_H)
-        message(FATAL_ERROR "X11 headers not found, install libx11-dev on Debian or the package that installs it on your distro")
-    endif()
+    find_package(PkgConfig REQUIRED)
+    pkg_check_modules(GLX REQUIRED gl)
+    pkg_check_modules(VULKAN REQUIRED vulkan)
+    pkg_check_modules(X11 REQUIRED x11)
+    include_directories(${GLX_INCLUDE_DIRS})
+    include_directories(${VULKAN_INCLUDE_DIRS})
+    include_directories(${X11_INCLUDE_DIRS})
 else()
     message("Building without thunking support")
 endif()
